--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -10,7 +10,7 @@ jobs:
       with:
         fetch-depth: 1
     - name: apt
-      run: sudo apt update && sudo apt install gcc-m68k-linux-gnu vim-common
+      run: sudo apt update && sudo apt install gcc-m68k-linux-gnu vim-common ninja-build
     - name: make
       run: make
 
